# Cryptography

Lab1/: CMakeLists.txt  client.cpp  encrypt.cpp  encrypt.h  server.cpp
Lab1/doc/: 22BCE1765_lab1.aux  22BCE1765_lab1.fdb_latexmk  22BCE1765_lab1.fls  22BCE1765_lab1.tex
Lab2/: main.py
Lab3/: aes.py
Lab4/: DiffieHellman.py  RSA.py
